# warp-gui-app

./: Cargo.toml  README.md
src/: lib.rs  main.rs
ui/: appwindow.slint
