[package]
name = "warp-gui-app"
version = "0.1.0"
authors = ["AbhayJo"]
edition = "2021"
build = "build.rs"
description = "Cloudflare Warp GUI client"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
    
[build-dependencies]
slint-build = "1.0"

[bin]
name = "warp-gui-app"