[package]
name = "warp-gui-app"
version = "0.1.2"
authors = ["AbhayJo"]
edition = "2021"
build = "build.rs"
description = "Cloudflare Warp GUI client"
license-file = "LICENSE"
repository = "https://github.com/Abhay-N-J/warp-gui-app"
keywords = ["cli", "GUI", "Warp", "warp-cli", "warp-gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
    
[build-dependencies]
slint-build = "1.0"

[[bin]]
name = "warp-gui-app"
